[tool.poetry]
name = "rfcommonlibrary"
version = "0.1.0"
description = ""
authors = ["fengyu <sirfengyu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.0.5"
robotframework-selenium2library = "^3.0.0"
robotframework = "^3.1.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

